# Soriwa

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/newstone/soriwa/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/newstone/soriwa/demo/: MainActivity.kt  MainViewModel.kt
app/src/main/res/layout/: layout.xml
app/src/test/java/com/newstone/soriwa/demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
soriwa/: CMakeLists.txt  build.gradle
soriwa/src/androidTest/java/com/newstone/soriwa/: ExampleInstrumentedTest.kt
soriwa/src/main/: AndroidManifest.xml
soriwa/src/main/cpp/: Soriwa.cpp  com_newstone_soriwa_Soriwa.cpp
soriwa/src/main/cpp/include/: Soriwa.h  com_newstone_soriwa_Soriwa.h
soriwa/src/main/cpp/player/: BasePlayer.cpp  CustomPlayer.cpp
soriwa/src/main/cpp/player/include/: BasePlayer.h  CustomPlayer.h
soriwa/src/main/cpp/source/: BaseSource.cpp
soriwa/src/main/cpp/source/include/: BaseSource.h
soriwa/src/main/cpp/util/: AudioThreadPool.cpp  FfmpegDecoder.cpp
soriwa/src/main/cpp/util/include/: AudioThreadPool.h  FfmpegDecoder.h  common_header.h
soriwa/src/main/java/com/newstone/soriwa/: Configuration.java  Soriwa.java
soriwa/src/main/res/values/: strings.xml
soriwa/src/main/tools/cmake/: gaudiofx_version.cmake
soriwa/src/main/tools/version/: soriwa_version.cpp.in  soriwa_version.h.in
soriwa/src/test/java/com/newstone/soriwa/: ExampleUnitTest.kt
